--- a/src/main/components/Emitir/Emitir.scss
+++ b/src/main/components/Emitir/Emitir.scss
@@ -6,7 +6,33 @@
     width: 40%;
     min-width: 20em;
     margin-right: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em
 }
 .main-card{
     width: 100%!important;
+}
+
+.data-card h3{
+    font-size: 17pt;
+    font-weight: 700;
+    margin: 0;
+}
+.data-card h4{
+    font-size: 15pt!important;
+    font-weight: 600;
+    margin: 0;
+}
+.data-card h5{
+    font-size: 12pt;
+    font-weight: 400;
+    color: #AAA;
+    margin: 0;
+}
+.data-card h2{
+    font-size: 23pt;
+    font-weight: 800;
+    margin: .4em 0;
 }
