--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -161,3 +161,7 @@ select:active, select:focus  {
 .form .f-check-row input[type="checkbox"]:focus {
    box-shadow: none!important;
 }
+
+.m-top {
+    margin-top: 2em;
+}
