--- a/src/cotizaciones/components/CotizacionList.scss
+++ b/src/cotizaciones/components/CotizacionList.scss
@@ -5,8 +5,12 @@
   justify-content: space-between;
 };
 
-.body-cotizaciones {
+.body-cotizaciones, .body-cotizaciones thead tr {
   background-color: #fff;
+}
+
+select {
+  display: inline-block;
 }
 
 table {
@@ -19,4 +23,8 @@ th, td {
   padding: 8px;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(odd) {background-color: #f2f2f2;}
+
+.controles > * {
+  width: auto!important
+}
