--- a/src/cotizaciones/components/CotizacionList.scss
+++ b/src/cotizaciones/components/CotizacionList.scss
@@ -28,3 +28,12 @@ tr:nth-child(odd) {background-color: #f2f2f2;}
 .controles > * {
   width: auto!important
 }
+
+.search-input {
+  height: 80%;
+}
+
+.search-input-wrapper {
+  align-items: center;
+  padding: 1em;
+}
